menu instructions and pager design added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import "base/container";
 @import "base/social-icons";
 @import "base/messages";
+@import "base/pager";
 @import "base/menu-local-task";
 
 // 2. ELEMENTS
