--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -65,66 +65,77 @@
   font-weight: 300;
   font-style: normal;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-LightItalic.ttf);
   font-weight: 300;
   font-style: italic;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-Regular.ttf);
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-Italic.ttf);
   font-weight: 400;
   font-style: italic;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-Medium.ttf);
   font-weight: 500;
   font-style: normal;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-MediumItalic.ttf);
   font-weight: 500;
   font-style: italic;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-SemiBold.ttf);
   font-weight: 600;
   font-style: normal;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-SemiBoldItalic.ttf);
   font-weight: 600;
   font-style: italic;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-Bold.ttf);
   font-weight: 700;
   font-style: normal;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-BoldItalic.ttf);
   font-weight: 700;
   font-style: italic;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-ExtraBold.ttf);
   font-weight: 800;
   font-style: normal;
 }
+
 @font-face {
   font-family: Open-Sans;
   src: url(../fonts/Open_Sans/OpenSans-ExtraBoldItalic.ttf);
@@ -142,36 +153,85 @@
   font-weight: 300;
   font-style: normal;
 }
+
 @font-face {
   font-family: Roboto-Condensed;
   src: url(../fonts/Roboto_Condensed/RobotoCondensed-LightItalic.ttf);
   font-weight: 300;
   font-style: italic;
 }
+
 @font-face {
   font-family: Roboto-Condensed;
   src: url(../fonts/Roboto_Condensed/RobotoCondensed-Regular.ttf);
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: Roboto-Condensed;
   src: url(../fonts/Roboto_Condensed/RobotoCondensed-Italic.ttf);
   font-weight: 400;
   font-style: italic;
 }
+
 @font-face {
   font-family: Roboto-Condensed;
   src: url(../fonts/Roboto_Condensed/RobotoCondensed-Bold.ttf);
   font-weight: 700;
   font-style: normal;
 }
+
 @font-face {
   font-family: Roboto-Condensed;
   src: url(../fonts/Roboto_Condensed/RobotoCondensed-BoldItalic.ttf);
   font-weight: 700;
   font-style: italic;
 }
+
+// THE PLAY FAIR DISPLAY - SERIF
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-Regular.ttf);
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-Medium.ttf);
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-SemiBold.ttf);
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-Bold.ttf);
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-ExtraBold.ttf);
+  font-weight: 800;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-Black.ttf);
+  font-weight: 900;
+  font-style: italic;
+}
+
 
 // FONT FAMILIES
 /* stylelint-disable */
