--- a/scss/base/_pager.scss
+++ b/scss/base/_pager.scss
@@ -16,7 +16,7 @@
         align-items: center;
         justify-content: center;
         color: #333;
-        font-family: $font-open;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 13px;
         font-style: normal;
         font-weight: 600;
