menu instruction updated

--- a/scss/base/_social-icons.scss
+++ b/scss/base/_social-icons.scss
@@ -1,50 +1,63 @@
 .social-icon {
+    display: block;
     width: 28px;
     height: 28px;
     background-size: contain;
     background-repeat: no-repeat;
 }
-.facebook{
+
+.facebook {
     background-image: url("../icons/social-icons/rounded/facebook.svg");
 }
-.youtube{
+
+.youtube {
     background-image: url("../icons/social-icons/rounded/youtube.svg");
 }
-.twitter{
+
+.twitter {
     background-image: url("../icons/social-icons/rounded/twitter.svg");
 }
-.pinterest{
+
+.pinterest {
     background-image: url("../icons/social-icons/rounded/pinterest.svg");
 }
-.instagram{
+
+.instagram {
     background-image: url("../icons/social-icons/rounded/instagram.svg");
 }
-.linkedin{
+
+.linkedin {
     background-image: url("../icons/social-icons/rounded/linkedin.svg");
 }
-.googleplus{
+
+.googleplus {
     background-image: url("../icons/social-icons/rounded/googleplus.svg");
 }
-.whatsapp{
+
+.whatsapp {
     background-image: url("../icons/social-icons/rounded/whatsapp.svg");
 }
-.snapchat{
+
+.snapchat {
     background-image: url("../icons/social-icons/rounded/snapchat.svg");
 }
-.feed{
+
+.feed {
     background-image: url("../icons/social-icons/rounded/feed.svg");
 }
-.flipboard{
+
+.flipboard {
     background-image: url("../icons/social-icons/rounded/flipboard.svg");
 }
-.messenger{
+
+.messenger {
     background-image: url("../icons/social-icons/rounded/messenger.svg");
 }
-.reddit{
+
+.reddit {
     background-image: url("../icons/social-icons/rounded/reddit.svg");
 }
-.skype{
+
+.skype {
     background-image: url("../icons/social-icons/rounded/skype.svg");
 }
-
-
