--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,6 +1,21 @@
-* {
+*, *::after, *::before {
   box-sizing: border-box;
 }
+*{
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+img, picture, video, svg{
+  display: block;
+  max-width: 100%;
+}
+
+input, textarea, button, select {
+  font: inherit;
+}
+
+
 
 body {
   margin: 0;
