--- a/css/style.css
+++ b/css/style.css
@@ -164,18 +164,73 @@
   font-weight: 700;
   font-style: italic;
 }
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-Regular.ttf);
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-Medium.ttf);
+  font-weight: 500;
+  font-style: italic;
+}
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-SemiBold.ttf);
+  font-weight: 600;
+  font-style: italic;
+}
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-Bold.ttf);
+  font-weight: 700;
+  font-style: italic;
+}
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-ExtraBold.ttf);
+  font-weight: 800;
+  font-style: italic;
+}
+@font-face {
+  font-family: Play-Fair-Display;
+  src: url(../fonts/PlayFairDisplay/PlayfairDisplay-Black.ttf);
+  font-weight: 900;
+  font-style: italic;
+}
 /* stylelint-disable */
 /* stylelint-enable */
-* {
+*, *::after, *::before {
   box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+img, picture, video, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, textarea, button, select {
+  font: inherit;
 }
 
 body {
   margin: 0;
 }
 
+.slick-initialized {
+  overflow: hidden;
+}
+
 body {
-  font-family: Open-Sans, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .container, .info-message, .error-message, .success-message {
@@ -194,6 +249,7 @@ body {
 }
 
 .social-icon {
+  display: block;
   width: 28px;
   height: 28px;
   background-size: contain;
@@ -362,36 +418,324 @@ body {
   font-size: 1.5rem;
 }
 
-.primary-tabs {
+body {
+  overflow-x: hidden;
+}
+
+.menubar {
+  height: 110px;
+  background-color: white;
+  border-bottom: 1px solid gray;
+  display: flex;
+  align-items: center;
+}
+.menubar .menu-wrapper {
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 40px;
+}
+@media (min-width: 768px) {
+  .menubar .menu-wrapper {
+    gap: 80px;
+  }
+}
+.menubar .menu-wrapper .logo-link-wrapper img {
+  width: 237px;
+  height: 75px;
+  object-fit: contain;
+}
+.menubar .menu-wrapper .menu-main-block {
   position: absolute;
+  top: 110px;
+  right: 0;
+  width: 0;
+  background-color: white;
+  z-index: 10;
+  height: calc(100vh - 110px);
+  transition: all 0.3s ease-in-out;
+  overflow-x: hidden;
+  -webkit-box-shadow: -16px 27px 57px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -16px 27px 57px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: -16px 27px 57px -8px rgba(0, 0, 0, 0.75);
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .menu-main-block {
+    justify-self: end;
+    overflow: unset;
+  }
+}
+.menubar .menu-wrapper .menu-main-block.menu-opened {
+  width: 360px;
+}
+@media (min-width: 768px) {
+  .menubar .menu-wrapper .menu-main-block.menu-opened {
+    width: 400px;
+  }
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .menu-main-block {
+    display: block;
+    position: unset;
+    background: unset;
+    top: unset;
+    right: unset;
+    width: unset;
+    height: unset;
+    transition: unset;
+    transform: unset;
+    -webkit-box-shadow: unset;
+    -moz-box-shadow: unset;
+    box-shadow: unset;
+  }
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items {
+  overflow-x: hidden;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  flex-direction: column;
+  display: flex;
+  align-items: start;
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .menu-main-block > .menu-items {
+    flex-direction: row;
+    align-items: center;
+    gap: 30px;
+    overflow: unset;
+  }
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item {
+  padding: 30px;
+  border-bottom: 1px solid rgb(164, 164, 164);
+  width: 100%;
+  position: relative;
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item {
+    width: unset;
+    padding: 0;
+    border-bottom: 0;
+  }
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item a {
+  color: #111010;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item a.is-active {
+  color: #738cd1;
+  font-weight: 700;
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item[child=yes] {
+  position: relative;
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item[child=yes]::after {
+  content: "";
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="11" height="6" viewBox="0 0 11 6" fill="none"><path d="M1.07324 1L5.00259 4.92935" stroke="%23C23E3E" stroke-width="2" stroke-linecap="round"/><path d="M9.21973 1L5.29038 4.92935" stroke="%23C23E3E" stroke-width="2" stroke-linecap="round"/></svg>');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 12px;
+  height: 7px;
+  position: absolute;
+  top: 40px;
+  translate: -50%;
+  left: 50%;
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item[child=yes]::after {
+    top: 65px;
+    translate: -50% 0;
+  }
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item[child=yes] {
+    display: flex;
+    height: 100px;
+    align-items: center;
+  }
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item:hover > .menu-items {
+  display: block;
+  padding-top: 1rem;
+  padding-left: 2rem;
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item:hover > .menu-items {
+    padding: 8px 1rem;
+  }
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item .menu-items {
+  display: none;
+  padding: 0;
+  list-style: none;
+  background: white;
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item .menu-items {
+    position: absolute;
+    box-shadow: 1px 7px 17px -2px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 1px 7px 17px -2px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 1px 7px 17px -2px rgba(0, 0, 0, 0.75);
+    padding: 8px 1rem;
+    border-radius: 4px;
+    width: 200px;
+    top: 80px;
+  }
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item .menu-items > .menu-item {
+  padding-bottom: 8px;
+  padding-top: 8px;
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item .menu-items > .menu-item:hover {
+  border-bottom: 1px solid black;
+}
+.menubar .menu-wrapper .menu-main-block > .menu-items > .menu-item .menu-items > .menu-item:last-child {
+  border-bottom: 0;
+}
+.menubar .menu-wrapper .hamburger {
+  justify-self: flex-end;
+  cursor: pointer;
+}
+.menubar .menu-wrapper .hamburger svg {
+  width: 40px;
+  height: 40px;
+}
+.menubar .menu-wrapper .hamburger.closed-menu {
+  display: block;
+}
+@media (min-width: 1280px) {
+  .menubar .menu-wrapper .hamburger.closed-menu {
+    display: none;
+  }
+}
+
+.d-none {
+  display: none !important;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+@media (min-width: 1280px) {
+  .overflow-hidden {
+    overflow: unset;
+  }
+}
+
+.overlay {
+  position: relative;
+}
+.overlay::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  top: 110px;
+  width: 100%;
+  height: calc(100vh - 110px);
+  background-color: rgba(0, 0, 0, 0.75);
+}
+@media (min-width: 1280px) {
+  .overlay::after {
+    content: unset;
+  }
+}
+
+.pager {
+  margin-top: 52px;
+}
+.pager ul.pager__items {
+  display: flex;
+  gap: 8px;
+  list-style: none;
+  justify-content: end;
+}
+.pager ul.pager__items li.pager__item a {
+  text-decoration: none;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #333;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border-radius: 50%;
+  background-color: white;
+  border: 1px solid #F1F1F1;
+}
+.pager ul.pager__items li.pager__item.is-active a {
+  background-color: #dc101b;
+  color: white;
+}
+
+.primary-tabs {
   z-index: 3;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: fit-content;
   list-style: none;
-  border-bottom: 2px solid black;
-  background: white;
-  gap: 1rem;
+  gap: 4px;
   padding-top: 4px;
 }
+.primary-tabs li {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .primary-tabs li {
+    width: unset;
+  }
+}
 .primary-tabs li a {
+  text-align: center;
   padding: 8px 12px;
   text-decoration: none;
   color: black;
+  transition: all 0.3s ease;
+  border: 1px solid black;
+  width: 100%;
+  display: block;
+}
+@media (min-width: 768px) {
+  .primary-tabs li a {
+    width: unset;
+    display: inline;
+    border: 0;
+  }
+}
+.primary-tabs li a:hover {
+  background-color: rgb(206, 206, 206);
 }
 .primary-tabs li a.is-active {
-  display: inline-block;
   color: white;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  background: #0f1618;
+  background-color: black;
+}
+@media (min-width: 768px) {
+  .primary-tabs li a.is-active {
+    display: inline-block;
+    color: white;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    background: #0f1618;
+  }
 }
 @media (min-width: 768px) {
   .primary-tabs {
-    position: unset;
     flex-direction: row;
     width: 100%;
+    border-bottom: 2px solid black;
+    background: white;
   }
 }
 
