--- a/scss/base/_menu-local-task.scss
+++ b/scss/base/_menu-local-task.scss
@@ -1,31 +1,53 @@
 .primary-tabs {
-  position: absolute;
   z-index: 3;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: fit-content;
   list-style: none;
-  border-bottom: 2px solid black;
-  background: white;
-  gap: 1rem;
+
+  gap: 4px;
   padding-top: 4px;
-  li a {
-    padding: 8px 12px;
-    text-decoration: none;
-    color: black;
-    &.is-active {
-      display: inline-block;
-      color: white;
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-      background: $black-color;
+  li {
+    width: 100%;
+    @include tablet {
+      width: unset;
+    }
+    a {
+      text-align: center;
+      padding: 8px 12px;
+      text-decoration: none;
+      color: black;
+      transition: all 0.3s ease;
+      border: 1px solid black;
+
+      width: 100%;
+      display: block;
+      @include tablet {
+        width: unset;
+        display: inline;
+        border: 0;
+      }
+      &:hover {
+        background-color: rgb(206, 206, 206);
+      }
+      &.is-active {
+        color: white;
+        background-color: black;
+        @include tablet {
+          display: inline-block;
+          color: white;
+          border-top-left-radius: 4px;
+          border-top-right-radius: 4px;
+          background: $black-color;
+        }
+      }
     }
   }
 
   @include tablet {
-    position: unset;
     flex-direction: row;
     width: 100%;
+    border-bottom: 2px solid black;
+    background: white;
   }
 }
