--- a/scss/base/_pager.scss
+++ b/scss/base/_pager.scss
@@ -29,7 +29,7 @@
 
       &.is-active {
         a {
-          background-color: $red-color;
+          background-color: #dc101b;
           color: white;
         }
       }
