--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,17 +1,28 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
   font: inherit;
 }
-img, picture, video, svg{
+
+img,
+picture,
+video,
+svg {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
-input, textarea, button, select {
+input,
+textarea,
+button,
+select {
   font: inherit;
 }
 
