--- a/scss/base/_menu-local-task.scss
+++ b/scss/base/_menu-local-task.scss
@@ -7,11 +7,14 @@
 
   gap: 4px;
   padding-top: 4px;
+
   li {
     width: 100%;
+
     @include tablet {
       width: unset;
     }
+
     a {
       text-align: center;
       padding: 8px 12px;
@@ -22,23 +25,27 @@
 
       width: 100%;
       display: block;
+
       @include tablet {
         width: unset;
         display: inline;
         border: 0;
       }
+
       &:hover {
         background-color: rgb(206, 206, 206);
       }
+
       &.is-active {
         color: white;
         background-color: black;
+
         @include tablet {
           display: inline-block;
           color: white;
           border-top-left-radius: 4px;
           border-top-right-radius: 4px;
-          background: $black-color;
+          background: #0f1618;
         }
       }
     }
