--- a/css/style.css
+++ b/css/style.css
@@ -748,4 +748,209 @@ body {
   }
 }
 
+#media-library-wrapper {
+  display: flex;
+  margin: -1rem -1.5rem -1rem -1rem;
+}
+#media-library-wrapper .js-media-library-menu {
+  list-style: none;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  #media-library-wrapper .js-media-library-menu {
+    width: 250px;
+  }
+}
+#media-library-wrapper .js-media-library-menu li a {
+  border-bottom: 1px solid #ccc;
+  display: block;
+  text-decoration: none;
+  padding: 16px 8px;
+  border-right: 1px solid #ccc;
+  padding-left: 32px;
+}
+#media-library-wrapper .js-media-library-menu li a:focus-visible {
+  outline: 0;
+  border-bottom: 2px solid #198754;
+}
+#media-library-wrapper .js-media-library-menu li a.active {
+  border-right: 0;
+  box-shadow: -7px 0 2px 0.25rem rgba(0, 0, 0, 0.1);
+  border-left: 5px solid #198754;
+}
+
+#media-library-content {
+  padding: 16px;
+}
+#media-library-content #media-library-add-form-wrapper {
+  background-color: white;
+  box-shadow: 0 2px 0.25rem rgba(0, 0, 0, 0.1);
+  border: 1px solid #dedfe4;
+  padding: 20px;
+  margin-bottom: 16px;
+}
+#media-library-content #media-library-add-form-wrapper input[type=file] {
+  padding: 10px 15px;
+  border: 1px solid #1d1d1d;
+  margin-bottom: 4px;
+}
+#media-library-content .views-exposed-form {
+  display: flex;
+  align-items: flex-end;
+  gap: 8px;
+  margin-bottom: 16px;
+  box-shadow: 0 2px 0.25rem rgba(0, 0, 0, 0.1);
+  border: 1px solid #dedfe4;
+  padding: 20px;
+}
+#media-library-content .views-exposed-form input,
+#media-library-content .views-exposed-form .nice-select {
+  margin-bottom: 0;
+  padding-inline: 20px;
+}
+#media-library-content .views-exposed-form input[type=submit] {
+  height: 40px;
+}
+#media-library-content header {
+  display: flex;
+  align-self: flex-end;
+  margin: 1em 0;
+  text-align: right;
+}
+#media-library-content header a {
+  padding-left: 1.2rem;
+  align-items: center;
+}
+#media-library-content header .views-display-link-widget {
+  margin-right: 0.9375rem;
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3e%3cpath fill='%23333333' d='M10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3A1.5 1.5 0 0 1 10.5 9zm-8 0h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3A1.5 1.5 0 0 1 2.5 9zm8-8h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3A1.5 1.5 0 0 1 10.5 1zm-8 0h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3A1.5 1.5 0 0 1 2.5 1z'/%3e%3c/svg%3e") left 0 no-repeat;
+}
+#media-library-content header .views-display-link-widget_table {
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3e%3cpath fill='%23333333' d='M7 15a1.5 1.5 0 0 1 0-3h7a1.5 1.5 0 0 1 0 3H7zm-4.5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zM7 9.5a1.5 1.5 0 0 1 0-3h7a1.5 1.5 0 0 1 0 3H7zm-4.5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zM7 4a1.5 1.5 0 0 1 0-3h7a1.5 1.5 0 0 1 0 3H7zM2.5 4a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z'/%3e%3c/svg%3e") left 0 no-repeat;
+}
+#media-library-content .media-library-views-form__rows {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+@media (min-width: 768px) {
+  #media-library-content .media-library-views-form__rows {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 1280px) {
+  #media-library-content .media-library-views-form__rows {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+#media-library-content .media-library-views-form__rows .js-media-library-item {
+  padding: 0.5rem;
+  vertical-align: top;
+  outline: none;
+  background: #fff;
+  position: relative;
+}
+#media-library-content .media-library-views-form__rows .js-media-library-item::before {
+  position: absolute;
+  top: 0.4375rem;
+  left: 0.4375rem;
+  width: calc(100% - 1rem);
+  height: calc(100% - 1rem);
+  content: "";
+  transition: border-color 0.2s, color 0.2s, background 0.2s;
+  pointer-events: none;
+  border: 1px solid #dbdbdb;
+  border-radius: 2px;
+  box-shadow: 0 2px 0.25rem rgba(0, 0, 0, 0.1);
+}
+#media-library-content .media-library-views-form__rows .js-media-library-item .form-checkbox {
+  position: absolute;
+  z-index: 1;
+  top: 1rem;
+  left: 1rem;
+  display: block;
+}
+#media-library-content .media-library-views-form__rows .js-media-library-item .js-media-library-item-preview {
+  overflow: hidden;
+  text-align: center;
+  background-color: #ebebeb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#media-library-content .media-library-views-form__rows .js-media-library-item .js-media-library-item-preview img {
+  height: 11.25rem;
+  object-fit: contain;
+  object-position: center center;
+}
+#media-library-content .media-library-views-form__rows .js-media-library-item .media-library-item__attributes {
+  padding: 10px;
+}
+
+.btn, .btn-danger, .btn-success, .btn-secondary, #media-library-content .views-exposed-form input[type=submit], .btn-primary {
+  display: inline-block;
+  font-weight: 400 !important;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-decoration: none;
+  color: white !important;
+}
+
+.btn-small {
+  padding: 0.25rem 0.5rem;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
+.btn-primary:hover {
+  background-color: #0069d9;
+  border-color: #0062cc;
+  color: white;
+}
+
+.btn-secondary, #media-library-content .views-exposed-form input[type=submit] {
+  background-color: #6c757d;
+  border-color: #6c757d;
+  color: white;
+}
+.btn-secondary:hover, #media-library-content .views-exposed-form input[type=submit]:hover {
+  background-color: #5c636a;
+  border-color: #565e64;
+}
+
+.btn-success {
+  background-color: #198754;
+  border-color: #198754;
+  color: white;
+}
+.btn-success:hover {
+  background-color: #157347;
+  border-color: #146c43;
+}
+
+.btn-danger {
+  background-color: #dc3545;
+  border-color: #dc3545;
+  color: white;
+}
+.btn-danger:hover {
+  background-color: #bb2d3b;
+  border-color: #b02a37;
+}
+
 /*# sourceMappingURL=style.css.map */
